Add crowsnest and fix macro for bltouch

--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -25,6 +25,8 @@ gcode:
     {% set BED_TEMP = params.BED_TEMP|default(50)|float %}
     {% set CHECK_EXTRUDER_TEMP = params.CHECK_EXTRUDER_TEMP|default(True) %}
     {% set CHECK_BED_TEMP = params.CHECK_BED_TEMP|default(True) %}
+    # If the target is more than 80 (max for the BLtouch is 65)
+    {% set MAX_TEMP_FOR_PROBING = 80 %}
     {% set MIN_EXTRUDER_TEMP = params.MIN_EXTRUDER_TEMP|default(75)|float %}
     {% if CHECK_EXTRUDER_TEMP == True %}
       { action_respond_info("Disabling heater on extruder and waiting to cool down to: {}".format((MIN_EXTRUDER_TEMP))) }
@@ -36,10 +38,9 @@ gcode:
       M106 S0 #Turn off fan
     {% endif %}
     {% if CHECK_BED_TEMP == True %}
-      # If the target is more than 70 (max for the BLtouch is 65) lower temperature for 70 max
-      {% if printer.heater_bed.target > 70 %}
-        { action_respond_info("The target temp is over 70C. Setting temporarily: {} for probing".format((BED_TEMP))) }
-        {% set BED_TEMP = 70 %}
+      {% if printer.heater_bed.target > MAX_TEMP_FOR_PROBING or BED_TEMP > MAX_TEMP_FOR_PROBING %}
+        { action_respond_info("The target temp is over allowe max for probing. Setting temporarily: {} for probing".format((MAX_TEMP_FOR_PROBING))) }
+        {% set BED_TEMP = MAX_TEMP_FOR_PROBING %}
       {% endif %}
       { action_respond_info("Wait for the bed temperature to reach: {}".format((BED_TEMP))) }
       M190 S{BED_TEMP} # Set and wait for bed temp
@@ -226,12 +227,10 @@ gcode:
     RESTORE_GCODE_STATE NAME=unload_state
     CLEAR_ACTIVE_SPOOL
 
-
 [gcode_macro STATUS_TEST]
 gcode:
     { action_respond_info("Printing: {}".format((printer.print_stats.filename))) }
     { action_respond_info("Status: {}".format((printer.idle_timeout.state))) }
-  
 
 [gcode_macro PID_TUNE_ALL]
 description: PID tune both heater and bed
@@ -243,7 +242,7 @@ gcode:
 [idle_timeout]
 timeout: 600
 gcode:
-  { action_respond_info("Printer is: {} Will execute poweroff gcode in 5 minutes".format((printer.idle_timeout.state))) }
+  { action_respond_info("Will execute poweroff gcode in 5 minutes. Printer status: {}".format((printer.idle_timeout.state))) }
   UPDATE_DELAYED_GCODE ID=delayed_printer_off DURATION=300
 
 [delayed_gcode delayed_printer_off]
