--- a/config/moonraker-update.conf
+++ b/config/moonraker-update.conf
@@ -45,11 +45,11 @@ requirements: scripts/mobileraker-requirements.txt
 #managed_services: sonar
 
 # Crowsnest update_manager entry
-#[update_manager crowsnest]
-#type: git_repo
-#path: ~/crowsnest
-#origin: https://github.com/mainsail-crew/crowsnest.git
-#managed_services: crowsnest
+[update_manager crowsnest]
+type: git_repo
+path: ~/crowsnest
+origin: https://github.com/mainsail-crew/crowsnest.git
+managed_services: crowsnest
 
 
 [update_manager timelapse]
