--- a/config/KlipperScreen.conf
+++ b/config/KlipperScreen.conf
@@ -31,26 +31,16 @@ name: {{ gettext('Bed Level') }}
 icon: bed-level
 panel: bed_level
 
-[menu __main cleanextruder]
-name: {{ gettext('Clean Extruder') }}
+[menu __main MTP]
+name: {{ gettext('Move to Purge') }}
 icon: move
 method: printer.gcode.script
-params: {"script":"CLEAN_EXTRUDER"}
+params: {"script":"MOVE_TO_PURGEBUCKET"}
 
 [menu __main zoffset]
 name: {{ gettext('Z Calibrate') }}
 icon: z-farther
 panel: zcalibrate
-
-[menu __main spoolman]
-name: {{ gettext('Spoolman') }}
-icon: spoolman
-panel: spoolman
-
-[menu __main power]
-name: {{ gettext('Power') }}
-icon: shutdown
-panel: power
 
 [menu __main more]
 name: {{ gettext('More') }}
