--- a/config/macros.cfg
+++ b/config/macros.cfg
@@ -50,7 +50,14 @@ gcode:
 rename_existing: _PROBE_CALIBRATE
 gcode:
     _CG28 #Home printer
-    _CALIBRATION_PREPARE
+    # Check if the target is already set this will ensure the STC will not change
+    # bed_temp when Fluidd or KlipperScreen retry button is pressed
+    {% if printer.heater_bed.target > 0 %}
+      {% set BED_TEMP = printer.heater_bed.target %}
+    {% else %}
+      {% set BED_TEMP = params.BED_TEMP|default(50)|float %}
+    {% endif %}
+    _CALIBRATION_PREPARE BED_TEMP={BED_TEMP}
     _PROBE_CALIBRATE
 
 [gcode_macro SCREWS_TILT_CALCULATE]
@@ -111,8 +118,9 @@ gcode:
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|float %}
     G90 # Use absolute coordinates
     _CG28 #Conditional home printer
-    SCREWS_TILT_CALCULATE MAX_DEVIATION=0.2 BED_TEMP={BED_TEMP} # This might lower bed temp for bl-touch
+    SCREWS_TILT_CALCULATE MAX_DEVIATION=0.1 BED_TEMP={BED_TEMP} # This might lower bed temp for bl-touch, max 0.1mm deviation
     _BED_MESH_CALIBRATE_CUSTOM BED_TEMP={BED_TEMP} # Run automesh
+    _TOOLHEAD_PARK_PAUSE_CANCEL # Move to park position (ommit filament drops on bed when heating up)
     M104 S{EXTRUDER_TEMP} # Set nozzle to reach temperature
     M190 S{BED_TEMP} #Set and wait for bed temp
     G1 Z5.0 F3000 ;Move Z Axis up
@@ -171,7 +179,6 @@ variable_custom_park_y: 300.0   ; custom y position; value must be within your d
 variable_speed_move: 150
 variable_park_at_cancel: True ; allow to move the toolhead to park while execute CANCEL_PRINT [True/False]
 gcode:
-
 
 
 [gcode_macro M600]
