--- a/config/printer.cfg
+++ b/config/printer.cfg
@@ -114,6 +114,7 @@ max_temp: 100
 
 [heater_fan hotend_fan]
 pin: PC0
+fan_speed: 1
 
 [fan]
 pin: PA0
@@ -233,7 +234,7 @@ max_z_accel: 100
 #*# max_y = 184.9
 #*#
 #*# [bltouch]
-#*# z_offset = 3.105
+#*# z_offset = 3.550
 #*#
 #*# [bed_mesh ender_s1_plus]
 #*# version = 1
